# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("./../multimedia_camera_framework.gni")
group("camera_fuzz_test") {
  testonly = true
  deps = [
    "fuzztest/bmsadapter_fuzzer:fuzztest",
    "fuzztest/cameraability_fuzzer:fuzztest",
    "fuzztest/cameraabilitybuilder_fuzzer:fuzztest",
    "fuzztest/camerademuxer_fuzzer:fuzztest",
    "fuzztest/cameradevice_fuzzer:fuzztest",
    "fuzztest/camerainput_fuzzer:fuzztest",
    "fuzztest/cameralistenerstub_fuzzer:fuzztest",
    "fuzztest/camerareportdfxutilsfuzztest_fuzzer:fuzztest",
    "fuzztest/camerawindowmanagerclient_fuzzer:fuzztest",
    "fuzztest/captureoutput_fuzzer:fuzztest",
    "fuzztest/capturesession_fuzzer:fuzztest",
    "fuzztest/cloudenhancesession_fuzzer:fuzztest",
    "fuzztest/commandserver_fuzzer:fuzztest",
    "fuzztest/commandserverimpl_fuzzer:fuzztest",
    "fuzztest/deferredphotoprocessingsessionstub_fuzzer:fuzztest",
    "fuzztest/deferredprocessingstub_fuzzer:fuzztest",
    "fuzztest/deferredvideocontroller_fuzzer:fuzztest",
    "fuzztest/deferredvideoprocessingsessioncallbackproxy_fuzzer:fuzztest",
    "fuzztest/deferredvideoprocessingsessioncallbackstub_fuzzer:fuzztest",
    "fuzztest/deferredvideoprocessingsessionproxy_fuzzer:fuzztest",
    "fuzztest/deferredvideoprocessingsessionstub_fuzzer:fuzztest",
    "fuzztest/deferredvideoprocessor_fuzzer:fuzztest",
    "fuzztest/deferredvideoprocsession_fuzzer:fuzztest",
    "fuzztest/dpsvideoreport_fuzzer:fuzztest",
    "fuzztest/fluorescencephotosession_fuzzer:fuzztest",
    "fuzztest/hcameradevice_fuzzer:fuzztest",
    "fuzztest/hcameralistenerstub_fuzzer:fuzztest",
    "fuzztest/hstreamcapture_fuzzer:fuzztest",
    "fuzztest/hstreamcapturestubfuzztest_fuzzer:fuzztest",
    "fuzztest/hstreamdepthdatacallbackproxyfuzztest_fuzzer:fuzztest",
    "fuzztest/hstreamdepthdatacallbackstubfuzztest_fuzzer:fuzztest",
    "fuzztest/hstreamdepthdataproxyfuzztest_fuzzer:fuzztest",
    "fuzztest/hstreamdepthdatastubfuzztest_fuzzer:fuzztest",
    "fuzztest/photooutput_fuzzer:fuzztest",
    "fuzztest/streamcapture_fuzzer:fuzztest",
    "fuzztest/streamcapturestub_fuzzer:fuzztest",
    "fuzztest/streammetadatastub_fuzzer:fuzztest",
    "fuzztest/streamrepeatstub_fuzzer:fuzztest",
    "fuzztest/timelapsephotosession_fuzzer:fuzztest",
  ]
}
