# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("./../multimedia_camera_framework.gni")
group("camera_fuzz_test") {
  testonly = true
  deps = [
    "fuzztest/cameradevice_fuzzer:fuzztest",
    "fuzztest/camerainput_fuzzer:fuzztest",
    "fuzztest/cameralistenerstub_fuzzer:fuzztest",
    "fuzztest/camerareportdfxutilsfuzztest_fuzzer:fuzztest",
    "fuzztest/capturesession_fuzzer:fuzztest",
    "fuzztest/cloudenhancesession_fuzzer:fuzztest",
    "fuzztest/deferredprocessingstub_fuzzer:fuzztest",
    "fuzztest/hcameraservice_fuzzer:fuzztest",
    "fuzztest/hcapturesession_fuzzer:fuzztest",
    "fuzztest/hstreammetadatacallbackproxy_fuzzer:fuzztest",
    "fuzztest/hstreammetadatacallbackstubfuzztest_fuzzer:fuzztest",
    "fuzztest/hstreammetadatastubfuzztest_fuzzer:fuzztest",
    "fuzztest/mediamanager_fuzzer:fuzztest",
    "fuzztest/mooncaptureboostfeature_fuzzer:fuzztest",
    "fuzztest/movingphotosurfacewrapper_fuzzer:fuzztest",
    "fuzztest/mpegmanager_fuzzer:fuzztest",
    "fuzztest/photooutput_fuzzer:fuzztest",
    "fuzztest/streamcapture_fuzzer:fuzztest",
    "fuzztest/streamcapturestub_fuzzer:fuzztest",
    "fuzztest/streammetadatastub_fuzzer:fuzztest",
    "fuzztest/streamrepeatstub_fuzzer:fuzztest",
    "fuzztest/timelapsephotosession_fuzzer:fuzztest",
    "fuzztest/videojobqueue_fuzzer:fuzztest",
    "fuzztest/videojobrepository_fuzzer:fuzztest",
    "fuzztest/videopostprocessor_fuzzer:fuzztest",
    "fuzztest/videoprocesscommand_fuzzer:fuzztest",
    "fuzztest/videostrategycenter_fuzzer:fuzztest",
  ]
}
